versioned_docs/version-9.3/download/download.mdx
---
title: Download & Install
description: How to Download and Install Poiyomi Toon Shaders.
image: /img/general/Thumb-DownloadInstall.png
keywords: [download, install, update, poiyomi, shader]
hide_table_of_contents: true
---

<ShowWhenRef equals="jinxxy">

:::note[Note for Jinxxy Customers]
Please ensure you use the right version of the shader as detailed by the Avatar Creator you purchased your Avatar from. It should be detailed in your Inventory, on the description of the Avatar's listing, or in a text file from the Avatar's archive you downloaded.

**Most commonly, you will be downloading the <u>FREE</u> version of the shader, which includes all of the features necessary for the Avatar to work.** To make things easier for you, we highly recommend installing the shader using the Creator Companion app of your choice. Jump to [Method 2: ALCOM / Creator Companion](#method-2-alcom--creator-companion) to read more on how to install it.

If your Avatar Creator asks you to use Poiyomi Pro, it is a PAID version of the shader and requires you to subscribe to access it ($10/month). **Only subscribe to Poiyomi Pro if the Avatar Creator explicitly states it's required, otherwise the FREE version should work without problems by switching your Materials to the Toon version of the shader.** For instructions on using Poiyomi Pro, jump to [Poiyomi Pro](#poiyomi-pro) on this page.
:::

</ShowWhenRef>

<ShowWhenRef equals="gumroad">

:::note[Note for Gumroad Customers]
Please ensure you use the right version of the shader as detailed by the Avatar Creator you purchased your Avatar from. It should be detailed in your Downloads, on the description of the product's listing, or in a text file from the Avatar's archive you downloaded.

**Most commonly, you will be downloading the <u>FREE</u> version of the shader, which includes all of the features necessary for the Avatar to work.** To make things easier for you, we highly recommend installing the shader using the Creator Companion app of your choice. Jump to [Method 2: ALCOM / Creator Companion](#method-2-alcom--creator-companion) to read more on how to install it.

If your Avatar Creator asks you to use Poiyomi Pro, it is a PAID version of the shader and requires you to subscribe to access it ($10/month). **Only subscribe to Poiyomi Pro if the Avatar Creator explicitly states it's required, otherwise the FREE version should work without problems by switching your Materials to the Toon version of the shader.** For instructions on using Poiyomi Pro, jump to [Poiyomi Pro](#poiyomi-pro) on this page.
:::

</ShowWhenRef>

The latest version of Poiyomi Shaders can be installed in one of two ways. Please be aware that there are different versions offered in terms of feature availability.

- For Poiyomi Toon (Free Version), choose which of the installation methods detailed below.
- If you're using Poiyomi Pro (Paid Version), [skip to the section by clicking here](#poiyomi-pro).

## Method 1: Manual Unity Package

The most common method used for installing Poiyomi Shaders is by importing the currently-provided Unity Package directly into your project. Read the instructions below to learn how to install the package:

<div style={{marginBottom: '20px'}}>

<a class="button button--primary" href="https://discord.gg/poiyomi" target="_blank"><FAIcon icon="fa-brands fa-discord"/> Join the Discord</a>&nbsp;<a class="button button--outline button--secondary" href="https://github.com/poiyomi/PoiyomiToonShader/releases/latest" target="_blank"><FAIcon icon="fa-solid fa-circle-down"/> Download from GitHub</a>&nbsp;<a class="button button--outline button--secondary" href="https://poiyomi.booth.pm/items/4841309" target="_blank"><FAIcon icon="fa-solid fa-circle-down"/> Download from BOOTH</a>

</div>

1. Join the [Poiyomi Discord Server](https://discord.gg/poiyomi) and download the latest `.unitypackage` posted in `#free-shader` channel.
    - OR you can download a stable, but likely outdated version of Poiyomi Toon Shader from either [GitHub <FAIcon icon="fa-solid fa-square-arrow-up-right"/>](https://github.com/poiyomi/PoiyomiToonShader/releases/latest) or [BOOTH <FAIcon icon="fa-solid fa-square-arrow-up-right"/>](https://poiyomi.booth.pm/items/4841309).
    - Make sure the file you download is a `.unitypackage` file, NOT a `.zip`!!
2. Import the Unity Package into your Unity Project from the Menu Bar via `Assets > Import Package > Custom Package` or by Drag & Dropping the file from your File Explorer directly into your Project's Assets folder.
3. Click `Import` when prompted.
   - *If you instead see a warning from another plugin claiming it's "already installed" then it's highly likely the Avatar Creator already included Poiyomi Shaders (which is bad practice). If this is the case, follow the [Updating Instructions](#updating-the-shader-unity-package) below instead.*
4. Done! Enjoy using Poiyomi Shaders.

### Updating the Shader Unity Package

When replacing or upgrading versions, you must do the following:
1. Delete the `Assets/_PoiyomiShaders` folder in your Project. **DO NOT SKIP THIS STEP!**
   - *Sometimes, Avatar Creators may attempt to hide the folder elsewhere in the project (which is bad practice). If this is the case, make sure you delete it!*
2. Import the newest Unity Package into your Project from the Menu Bar via `Assets > Import Package > Custom Package` or by Drag & Dropping the file from your File Explorer directly into your Project's Assets folder.
3. Click `Import` when prompted.
4. Done! You are now on the latest version.

:::danger
**DO NOT ATTEMPT to import Poiyomi Shaders over another, or your project may break!**
:::

## Method 2: ALCOM / Creator Companion

We recommend using [ALCOM <FAIcon icon="fa-solid fa-square-arrow-up-right"/>](https://vrc-get.anatawa12.com/en/alcom/) to install Poiyomi Shaders **and for managing VRChat Projects overall** since it's way faster and easier to use compared to the default VRChat Creator Companion App. Although, using the VRChat Creator Companion is also supported.

<Tabs>

<TabItem value="alcom" label="ALCOM" default>

If you are using [ALCOM <FAIcon icon="fa-solid fa-square-arrow-up-right"/>](https://vrc-get.anatawa12.com/en/alcom/) to install Poiyomi Shaders, follow these steps:

:::tip
If you have registered ALCOM to use the `vcc:` URL scheme, click the `Add to ALCOM` button below. If successful, skip to Step 3.

Otherwise, follow the instructions detailed below.
:::

<div style={{marginBottom: '20px'}}>

<a class="button button--primary" href="vcc://vpm/addRepo?url=https%3A%2F%2Fpoiyomi.github.io/vpm/index.json"><FAIcon icon="fa-solid fa-square-arrow-up-right"/> Add to ALCOM</a>

</div>
      
1. Open `Resources` and click `ADD REPOSITORY`.
2. Enter the URL under the "Enter information about the repository" line and click `ADD REPOSITORY`:
   - `https://poiyomi.github.io/vpm/index.json`
3. When prompted, confirm the following details are displayed, then click `ADD REPOSITORY`:
   - Name: `Poiyomi's VPM Repo`
   - URL: The URL you entered.
   - Packages:
     - `Poiyomi Toon Shader`
     - `Poiyomi Pro`
4. Afterwards, head back to `Projects`, click `MANAGE` for the project you want to add Poiyomi Shaders to, and look for `Poiyomi Toon Shader` in the list. Click the <FAIcon icon="fa-solid fa-circle-plus"/> icon for it. When prompted, click `APPLY`.
5. Done! Once ALCOM successfully installs the package, launch your Project and enjoy using Poiyomi Shaders.
      
**If an update becomes available, the `Latest` version number will be highlighted with a Green Box and a Green <FAIcon icon="fa-solid fa-circle-up"/> icon. Click it and hit `APPLY` when prompted to update to the latest version.**

The Repository also includes the `Poiyomi Pro` package. To learn more about Poiyomi Pro, [see the details below](#poiyomi-pro).

</TabItem>

<TabItem value="vcc" label="VRChat Creator Companion">

If you are using the default VRChat Creator Companion App, follow the instructions below:

<div style={{marginBottom: '20px'}}>

<a class="button button--primary" href="vcc://vpm/addRepo?url=https%3A%2F%2Fpoiyomi.github.io/vpm/index.json"><FAIcon icon="fa-solid fa-square-arrow-up-right"/> Add to VCC</a>

</div>

1. Click the `Add to VCC` button above to add Poiyomi Toon Shader to the Creator Companion. The button will open the Creator Companion App.
          - Didn't work? In the VCC, go to `Settings > Packages > Add Repository`, type in `https://poiyomi.github.io/vpm/index.json` and then click `Add`.
2. When Prompted, click the button labeled `I Understand, Add Respository`.
3. In the list, make sure `Poiyomi's VPM Repo` is checkmarked.
4. Find your Project in the VCC Project List, click `Manage Project`, then click the <FAIcon icon="fa-solid fa-circle-plus"/> button on `Poiyomi Toon Shader` to add it to your project.
5.  Done! Once the package is resolved, launch your Project and enjoy using Poiyomi Shaders.
      
**If an update becomes available, click the Green <FAIcon icon="fa-solid fa-circle-up"/> icon to update to the latest version.**

The Repository also includes the `Poiyomi Pro` package. To learn more about Poiyomi Pro, [see the details below](#poiyomi-pro).

</TabItem>

</Tabs>

:::warning
The VCC version of Poiyomi Shaders will automatically replace any existing copy of the `_PoiyomiShaders` folder in your Project's Assets in favor of the VCC Version, if it exists. Keep this in mind if you have any other versions, such as the Pro version, in your Project.
:::

## Poiyomi Pro

The Pro version of the shader (also known as Poiyomi Pro) is a Paid Version of the shader, available as a subscription model for $10/month on Patreon. It contains extra special features that are [outlined below](#features-chart).

Before using Poiyomi Pro, please ensure you agree to the [EULA](/terms-of-service/terms-of-service.mdx#pro-version).

<div style={{marginBottom: '20px'}}>

<a class="button button--warning" href="https://www.patreon.com/poiyomi" target="_blank"><FAIcon icon="fa-brands fa-patreon"/> Subscribe on Patreon ($10/month)</a>&nbsp;<a class="button button--outline button--secondary" href="https://pro.poiyomi.com/" target="_blank"><FAIcon icon="fa-solid fa-key"/> Login & Download</a>

</div>

In order to download and install Poiyomi Pro, please follow these updated instructions below. If you prefer to use the VCC version, [see the header below](#vcc-version).

1. Subscribe to the shader on [Patreon <FAIcon icon="fa-solid fa-square-arrow-up-right"/>](https://www.patreon.com/poiyomi) for $10/month USD or higher.
2. Login to [pro.poiyomi.com <FAIcon icon="fa-solid fa-square-arrow-up-right"/>](https://pro.poiyomi.com/) and follow the instructions to authenticate with your Patreon Account.
   - *If you don't see the pop-up Patreon Login window, check with your Browser to see if a pop-up window was blocked.*
3. If successful, you can then immediately download the latest version of the Pro shader by going to the Downloads page.
4. You may now proceed with **Step 2** of installing Poiyomi Shaders as described above in [Method 1.](#method-1-manual-unity-package)

- If you use Discord, please link your Discord to your Patreon Account. **This is required if you wish to receive Tech Support on the Pro version!**
   - *If successfully linked, you'll receive a fancy role, some perks, and access to the `#paid-shader` channel where you can also download the Pro shader from.*

**Only Pro Versions will be offered through <u>pro.poiyomi.com</u> or through <u>Discord</u>, and will never be distributed anywhere else!**

As a reminder, the Pro Shader only includes extra features. Therefore, it is not required if you are trying to access features already available in the Free version.

### VCC Version

:::warning[Poiyomi Pro VCC Beta]
The VCC offering of Poiyomi Pro is currently in Beta and may have bugs. Please report any issues you may have with it in our Discord server.
:::

The VCC version of Poiyomi Pro is available for those who prefer to install it through the VCC Repository. To ensure it works, you must be an active Patreon subscriber.

Follow the same instructions as noted above in [Method 2: ALCOM / Creator Companion](#method-2-alcom--creator-companion), but instead of adding the `Poiyomi Toon Shader` package to your project, you will install add `Poiyomi Pro`.

Things work a little differently when using this version upon launching your Unity Project. Basically, the following sequence will take place:
1. Upon launching your Unity Project, a script will run that will open your Web Browser. You will then be asked to authorize with your Patreon account on `pro.poiyomi.com`.
2. Login to your Patreon account when prompted, and confirm to authorize your connection to Poiyomi Pro.
   - *If you've already logged in to this website previously, you will be automatically redirected to the next step.*
3. When successful, a message should appear saying, *"Authentication successful. You may now close this window."*
4. Jump back into your Unity Project. Assuming you've successfully authorized linking your Patreon account, the script will automatically begin installing Poiyomi Pro into your project. Enjoy using Poiyomi Pro!

Do keep in mind that this script is intentionally designed to require an active subscription in order to receive future updates. So when updating Poiyomi Pro, you must go through the same process as detailed above.

By using Poiyomi Pro, you agree to the EULA stated [here](/terms-of-service/terms-of-service.mdx#pro-version).

### Features Chart

To see the different features offered between the Free vs. Pro version, refer to the table below:

| Role Access | Public | $2/month | $5/month | $10/month | $20/month | $50/month |
| :--- | :---: | :---: | :---: | :---: | :---: | :---: |
| **Toon/Pro Features** | | Nano | Micro | Mega | Giga | Tera |
| [Color & Normals](/color-and-normals/color-and-normals.mdx), [Color Adjust (Hue Shift)](/color-and-normals/color-adjust.mdx), [Details](/color-and-normals/details.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Alpha Options](/color-and-normals/alpha-options.mdx), [Back Face](/color-and-normals/back-face.mdx), [Normal Correct](/color-and-normals/normal-correct.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Decals](/color-and-normals/decals.mdx), [RGBA Color Masking](/color-and-normals/rgba-color-masking.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Anisotropics](/shading/anisotropics.mdx), [Matcaps](/shading/matcap.mdx), [CubeMap](/shading/cubemap.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Rim Lighting](/shading/rim-lighting.mdx), [Depth Rim Lighting](/shading/depth-rim-lighting.mdx), [Subsurface Scattering](/shading/subsurface-scattering.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Reflections & Specular](/shading/reflections-and-specular.mdx), [Clear Coat](/shading/clear-coat.mdx), [Environmental Rim](/shading/environmental-rim.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Stylized Reflections](/shading/stylized-reflections.mdx), [Backlight](/shading/backlight.mdx), [LTCGI](/shading/ltcgi.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Outlines](/outlines/outlines.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [UV Tile Discard](/special-fx/uv-tile-discard.mdx), [Proximity Color](/special-fx/proximity-color.mdx), [Mirror/Camera Visibility](/special-fx/mirror.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Depth Bulge](/special-fx/depth-bulge.mdx), [Depth FX](/special-fx/depth-fx.mdx), [Internal Parallax](/special-fx/internal-parallax.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Emissions](/special-fx/emission.mdx), [Glitter/Sparkle](/special-fx/glitter.mdx), [Dissolve](/special-fx/dissolve.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Flipbook](/special-fx/flipbook.mdx), [Pathing](/special-fx/pathing.mdx), [Stats Overlay](/special-fx/stats-overlay.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Stats Overlay](/special-fx/stats-overlay.mdx), [Video Effects](/special-fx/video-effects.mdx), [Voronoi](/special-fx/voronoi.mdx), [Truchet](/special-fx/truchet.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Audio Link](/audio-link/audio-link.mdx), [Global Themes](/modifiers/global-themes.mdx), [Global Mask](/modifiers/global-masks.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [VRC Light Volumes <FAIcon icon="fa-solid fa-square-arrow-up-right"/>](https://github.com/REDSIM/VRCLightVolumes) Support | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [BlackLight Masking](/modifiers/blacklight-masking.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| Stochastic Sampling, Distortion UV, Panosphere UV, Polar UV | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Parallax Heightmapping](/modifiers/uvs/parallax.mdx), [Post Processing Animations](/modifiers/post-processing/pp-animations.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Lil Fur](/extended-features/lilfur.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| Vertex Options |  |  |  |  |  |  |
| [Basics & Fun](/vertex-options/basics.mdx), [Glitching](/vertex-options/glitching.mdx), [LookAt](/vertex-options/look-at.mdx), [Vertex Colors](/vertex-options/vertex-colors.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Shading Styles](/shading/main.mdx) |  |  |  |  |  |  |
| Texture Ramp, Multilayer Math, Wrapped, Skin | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| ShadeMap, Flat, Realistic, Cloth, SDF | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Rendering Presets](/general/render-preset.mdx) |  |  |  |  |  |  |
| Opaque, Cutout, TransClipping, Fade, Transparent | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| Additive, Soft Additive, Multiplicative, 2x Multiplicative | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| Two Pass Transparency | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| [Grab Pass](/extended-features/grabpass.mdx) | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| **Pro Features** | | | | | | |
| [Screen Space Ambient Occlusion](/shading/ssao.mdx) | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| Custom Modules | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| [Geometric Dissolve](/extended-features/geometric-dissolve.mdx) | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| [Fur and World Fur](/extended-features/fur.mdx) | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| [Shatterwave](/extended-features/shatterwave.mdx) | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| [Tessellated](/extended-features/tessellated.mdx) | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| Tessellated Geometric | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| [Particles](/extended-features/particle.mdx) | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| Constellation | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| Wireframe | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| NameTag | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| Cubed | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| EyeFX | ❌ | ❌ | ❌ | ✅ | ✅ | ✅ |
| **Extras** | | | | | | |
| StencilInvis | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| Can Request a New Feature | ✅ | ✅ | ✅ | ✅ | ✅ | ✅ |
| Prioritized Features and Shader Request | ❌ | ❌ | ❌ | ❌ | ✅ | ✅ |
